--- a/notebooks/Opencv_Descriptors.ipynb
+++ b/notebooks/Opencv_Descriptors.ipynb
@@ -530,14 +530,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "error",
+     "evalue": "OpenCV(4.8.0) /io/opencv/modules/calib3d/src/fundam.cpp:385: error: (-28:Unknown error code -28) The input arrays should have at least 4 corresponding point sets to calculate Homography in function 'findHomography'\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[17], line 33\u001b[0m\n\u001b[1;32m     30\u001b[0m dst_pts \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mfloat32([keypoints2[m\u001b[39m.\u001b[39mtrainIdx]\u001b[39m.\u001b[39mpt \u001b[39mfor\u001b[39;00m m \u001b[39min\u001b[39;00m good_matches])\u001b[39m.\u001b[39mreshape(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m)\n\u001b[1;32m     32\u001b[0m \u001b[39m# Apply RANSAC to find inliers and outliers\u001b[39;00m\n\u001b[0;32m---> 33\u001b[0m M, mask \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39;49mfindHomography(src_pts, dst_pts, cv2\u001b[39m.\u001b[39;49mRANSAC, \u001b[39m5.0\u001b[39;49m)\n\u001b[1;32m     35\u001b[0m \u001b[39m# Extract the inliers and outliers\u001b[39;00m\n\u001b[1;32m     36\u001b[0m inliers \u001b[39m=\u001b[39m [good_matches[i] \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(good_matches)) \u001b[39mif\u001b[39;00m mask[i]]\n",
+      "\u001b[0;31merror\u001b[0m: OpenCV(4.8.0) /io/opencv/modules/calib3d/src/fundam.cpp:385: error: (-28:Unknown error code -28) The input arrays should have at least 4 corresponding point sets to calculate Homography in function 'findHomography'\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
     "\n",
     "# Load two frames and convert them to grayscale\n",
-    "frame1 = cv2.imread('../data/MH_02/1403636579763555584.png')\n",
-    "frame2 = cv2.imread('../data/MH_02/1403636579763555584.png')\n",
+    "frame1 = cv2.imread('../data/Rearrangment1/modified/frame1/rgb1/0.png')\n",
+    "frame2 = cv2.imread('../data/Rearrangment1/original/rgb0/0.png')\n",
     "gray1 = cv2.cvtColor(frame1, cv2.COLOR_BGR2GRAY)\n",
     "gray2 = cv2.cvtColor(frame2, cv2.COLOR_BGR2GRAY)\n",
     "gray2 = modify_intensity(gray2, alpha=0.7, beta=-50)\n",
@@ -595,7 +607,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[32], line 66\u001b[0m\n\u001b[1;32m     63\u001b[0m     M_new_homo[:\u001b[39m3\u001b[39m, :\u001b[39m3\u001b[39m] \u001b[39m=\u001b[39m M_new\n\u001b[1;32m     65\u001b[0m     \u001b[39m# Update the transformation matrix\u001b[39;00m\n\u001b[0;32m---> 66\u001b[0m     M \u001b[39m=\u001b[39m M_new_homo \u001b[39m@\u001b[39;49m M\n\u001b[1;32m     68\u001b[0m \u001b[39m# Apply the final transformation to verify the correctness\u001b[39;00m\n\u001b[1;32m     69\u001b[0m transformed_frame1 \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mwarpPerspective(frame1, M, (frame2\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m], frame2\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]))\n",
+      "Cell \u001b[0;32mIn[19], line 66\u001b[0m\n\u001b[1;32m     63\u001b[0m     M_new_homo[:\u001b[39m3\u001b[39m, :\u001b[39m3\u001b[39m] \u001b[39m=\u001b[39m M_new\n\u001b[1;32m     65\u001b[0m     \u001b[39m# Update the transformation matrix\u001b[39;00m\n\u001b[0;32m---> 66\u001b[0m     M \u001b[39m=\u001b[39m M_new_homo \u001b[39m@\u001b[39;49m M\n\u001b[1;32m     68\u001b[0m \u001b[39m# Apply the final transformation to verify the correctness\u001b[39;00m\n\u001b[1;32m     69\u001b[0m transformed_frame1 \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mwarpPerspective(frame1, M, (frame2\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m], frame2\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]))\n",
       "\u001b[0;31mValueError\u001b[0m: matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 3 is different from 4)"
      ]
     }
