--- a/notebooks/Gnc.ipynb
+++ b/notebooks/Gnc.ipynb
@@ -2,19 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 190,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
-      "[Open3D INFO] WebRTC GUI backend enabled.\n",
-      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import gtsam\n",
     "import numpy as np\n",
@@ -32,7 +22,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "def rotation_matrix_to_euler_angles(R):\n",
+    "    R = np.array(R)\n",
+    "\n",
+    "    # Extract individual rotation elements from the rotation matrix\n",
+    "    yaw = np.arctan2(R[1, 0], R[0, 0])\n",
+    "    pitch = np.arctan2(-R[2, 0], np.sqrt(R[2, 1] ** 2 + R[2, 2] ** 2))\n",
+    "    roll = np.arctan2(R[2, 1], R[2, 2])\n",
+    "\n",
+    "    return yaw, pitch, roll"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Adjoint', 'AdjointMap', 'AdjointTranspose', 'Align', 'Expmap', 'ExpmapDerivative', 'Identity', 'Logmap', 'LogmapDerivative', '__class__', '__delattr__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getstate__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__mul__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__setstate__', '__sizeof__', '__str__', '__subclasshook__', 'adjoint', 'adjointMap', 'adjointMap_', 'adjointTranspose', 'adjoint_', 'between', 'compose', 'deserialize', 'equals', 'expmap', 'inverse', 'localCoordinates', 'logmap', 'matrix', 'print', 'range', 'retract', 'rotation', 'serialize', 'slerp', 'transformFrom', 'transformPoseFrom', 'transformPoseTo', 'transformTo', 'translation', 'wedge', 'x', 'y', 'z']\n",
+      "['AxisAngle', 'ClosestTo', 'Expmap', 'Identity', 'Logmap', 'Pitch', 'Quaternion', 'Rodrigues', 'Roll', 'Rx', 'Ry', 'Rz', 'RzRyRx', 'Yaw', 'Ypr', '__class__', '__delattr__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getstate__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__mul__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__setstate__', '__sizeof__', '__str__', '__subclasshook__', 'axisAngle', 'between', 'column', 'compose', 'deserialize', 'equals', 'inverse', 'localCoordinates', 'logmap', 'matrix', 'pitch', 'print', 'retract', 'roll', 'rotate', 'rpy', 'serialize', 'slerp', 'toQuaternion', 'transpose', 'unrotate', 'xyz', 'yaw', 'ypr']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dir(Pose3))\n",
+    "print(dir(Rot3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +696,7 @@
        "'sample_graph.pdf'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -765,39 +794,236 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 202,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[R: [\n",
+      "\t1, 0, 0;\n",
+      "\t0, 1, 0;\n",
+      "\t0, 0, 1\n",
+      "]\n",
+      "t: 10 10 10\n",
+      ", R: [\n",
+      "\t1, 0, 0;\n",
+      "\t0, 1, 0;\n",
+      "\t0, 0, 1\n",
+      "]\n",
+      "t: 10 40 10\n",
+      ", R: [\n",
+      "\t1, 0, 0;\n",
+      "\t0, 1, 0;\n",
+      "\t0, 0, 1\n",
+      "]\n",
+      "t: 0 0 0\n",
+      ", R: [\n",
+      "\t1, 0, 0;\n",
+      "\t0, 1, 0;\n",
+      "\t0, 0, 1\n",
+      "]\n",
+      "t: 0 0 0\n",
+      ", R: [\n",
+      "\t1, 0, 0;\n",
+      "\t0, 1, 0;\n",
+      "\t0, 0, 1\n",
+      "]\n",
+      "t: 0 0 0\n",
+      "]\n"
+     ]
+    }
+   ],
    "source": [
     "# for Dynamic Static for 3d pot\n",
     "\n",
     "Scene1 = [\n",
     "    Pose3(Rot3(1, 0, 0, 0, 1, 0, 0, 0, 1), Point3(10, 10, 10)),\n",
     "    Pose3(Rot3(1, 0, 0, 0, 1, 0, 0, 0, 1), Point3(10, 40, 10)),\n",
-    "    Pose3(Rot3(), Point3()),\n",
-    "    Pose3(Rot3(), Point3()),\n",
-    "    Pose3(Rot3(), Point3()),\n",
+    "    Pose3(Rot3(), Point3(0, 0, 0)),\n",
+    "    Pose3(Rot3(), Point3(0, 0, 0)),\n",
+    "    Pose3(Rot3(), Point3(0, 0, 0)),\n",
     "]\n",
     "\n",
+    "print(Scene1)\n",
     "transform = Pose3(Rot3(), Point3(0, 0, 0))\n",
     "deviation = Pose3(Rot3.Ypr(0, 0, math.radians(20)), Point3(0, 0, 0))\n",
     "\n",
     "Scene2 = [\n",
     "    Pose3(Rot3(1, 0, 0, 0, 1, 0, 0, 0, 1), Point3(10, 10, 10)),\n",
     "    Pose3(Rot3(1, 0, 0, 0, 1, 0, 0, 0, 1), Point3(10, 40, 10)),\n",
-    "    Pose3(Rot3(), Point3()),\n",
-    "    Pose3(Rot3(), Point3()),\n",
-    "    Pose3(Rot3(), Point3()),\n",
+    "    Pose3(Rot3(), Point3(0, 0, 0)),\n",
+    "    Pose3(Rot3(), Point3(0, 0, 0)),\n",
+    "    Pose3(Rot3(), Point3(0, 0, 0)),\n",
     "]\n",
     "\n",
     "Scene3 = Scene1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Poses  [R: [\n",
+      "\t1, 0, 0;\n",
+      "\t0, 1, 0;\n",
+      "\t0, 0, 1\n",
+      "]\n",
+      "t: 0 0 0\n",
+      ", R: [\n",
+      "\t1, 0, 0;\n",
+      "\t0, 6.123234e-17, -1;\n",
+      "\t-0, 1, 6.123234e-17\n",
+      "]\n",
+      "t: 1 0 0\n",
+      ", R: [\n",
+      "\t1, 0, 0;\n",
+      "\t0, 1, 0;\n",
+      "\t0, 0, 1\n",
+      "]\n",
+      "t: 0 1 0\n",
+      "]\n",
+      "\n",
+      "transform poses [R: [\n",
+      "\t1, 0, 0;\n",
+      "\t0, 1, 0;\n",
+      "\t0, 0, 1\n",
+      "]\n",
+      "t: 0 0 0\n",
+      ", R: [\n",
+      "\t1, 0, 0;\n",
+      "\t0, 6.123234e-17, -1;\n",
+      "\t0, 1, 6.123234e-17\n",
+      "]\n",
+      "t: 1 0 0\n",
+      ", R: [\n",
+      "\t1, 0, 0;\n",
+      "\t0, 1, 0;\n",
+      "\t0, 0, 1\n",
+      "]\n",
+      "t: 0 1 0\n",
+      "]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def transform_poses(poses, R, t):\n",
+    "    \"\"\"\n",
+    "    Transforms a list of poses by rotating them around a point and translating them.\n",
+    "    \"\"\"\n",
+    "    # Convert R and t to gtsam.Pose3\n",
+    "    T = gtsam.Pose3(\n",
+    "        gtsam.Rot3(R[0], R[1], R[2], R[3], R[4], R[5], R[6], R[7], R[8]),\n",
+    "        gtsam.Point3(t[0], t[1], t[2]),\n",
+    "    )\n",
+    "\n",
+    "    # Create an empty list to store the transformed poses\n",
+    "    transformed_poses = []\n",
+    "\n",
+    "    # Loop through each pose in the list\n",
+    "    for pose in poses:\n",
+    "        # Transform the pose using T\n",
+    "        transformed_pose = T.compose(pose).compose(T.inverse())\n",
+    "\n",
+    "        # Add the transformed pose to the list\n",
+    "        transformed_poses.append(transformed_pose)\n",
+    "\n",
+    "    return transformed_poses\n",
+    "\n",
+    "\n",
+    "# Example usage\n",
+    "poses = [\n",
+    "    gtsam.Pose3(),\n",
+    "    gtsam.Pose3(gtsam.Rot3.Ypr(0, 0, math.pi / 2), gtsam.Point3(1, 0, 0)),\n",
+    "    gtsam.Pose3(gtsam.Rot3(), gtsam.Point3(0, 1, 0)),\n",
+    "]\n",
+    "\n",
+    "print(\"Poses \", poses)\n",
+    "\n",
+    "R = [1, 0, 0, 0, 1, 0, 0, 0, 1]\n",
+    "t = [0, 0, 0]\n",
+    "\n",
+    "transform_poses_val = transform_poses(poses, R, t)\n",
+    "print(\"\\ntransform poses\", transform_poses_val)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.0, 0.0, 0.0], [0.0, 1.0, 0.0], [0.0, 0.0, 1.0]]\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "append() takes exactly one argument (0 given)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[204], line 24\u001b[0m\n\u001b[1;32m     22\u001b[0m T_mat \u001b[39m=\u001b[39m [pose\u001b[39m.\u001b[39mtranslation()[\u001b[39m0\u001b[39m], pose\u001b[39m.\u001b[39mtranslation()[\u001b[39m1\u001b[39m], pose\u001b[39m.\u001b[39mtranslation()[\u001b[39m2\u001b[39m]]\n\u001b[1;32m     23\u001b[0m y, p, r \u001b[39m=\u001b[39m rotation_matrix_to_euler_angles(R_mat)\n\u001b[0;32m---> 24\u001b[0m transfom_mat\u001b[39m.\u001b[39;49mappend()\n\u001b[1;32m     25\u001b[0m \u001b[39mpass\u001b[39;00m\n",
+      "\u001b[0;31mTypeError\u001b[0m: append() takes exactly one argument (0 given)"
+     ]
+    }
+   ],
+   "source": [
+    "transfom_mat = []\n",
+    "\n",
+    "for pose in transform_poses_val:\n",
+    "    R_mat = [\n",
+    "        [\n",
+    "            pose.rotation().matrix()[0][0],\n",
+    "            pose.rotation().matrix()[0][1],\n",
+    "            pose.rotation().matrix()[0][2],\n",
+    "        ],\n",
+    "        [\n",
+    "            pose.rotation().matrix()[1][0],\n",
+    "            pose.rotation().matrix()[1][1],\n",
+    "            pose.rotation().matrix()[1][2],\n",
+    "        ],\n",
+    "        [\n",
+    "            pose.rotation().matrix()[2][0],\n",
+    "            pose.rotation().matrix()[2][1],\n",
+    "            pose.rotation().matrix()[2][2],\n",
+    "        ],\n",
+    "    ]\n",
+    "    print(R_mat)\n",
+    "    T_mat = [pose.translation()[0], pose.translation()[1], pose.translation()[2]]\n",
+    "    y, p, r = rotation_matrix_to_euler_angles(R_mat)\n",
+    "    transfom_mat.append()\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0.]\n",
+      "[[1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(poses[0].translation())\n",
+    "print(poses[0].rotation().matrix())"
    ]
   },
   {
@@ -817,20 +1043,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +1126,7 @@
        "x0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
