--- a/notebooks/Gnc.ipynb
+++ b/notebooks/Gnc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +696,7 @@
        "'sample_graph.pdf'"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -955,25 +955,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1.0, 0.0, 0.0], [0.0, 1.0, 0.0], [0.0, 0.0, 1.0]]\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "append() takes exactly one argument (0 given)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[204], line 24\u001b[0m\n\u001b[1;32m     22\u001b[0m T_mat \u001b[39m=\u001b[39m [pose\u001b[39m.\u001b[39mtranslation()[\u001b[39m0\u001b[39m], pose\u001b[39m.\u001b[39mtranslation()[\u001b[39m1\u001b[39m], pose\u001b[39m.\u001b[39mtranslation()[\u001b[39m2\u001b[39m]]\n\u001b[1;32m     23\u001b[0m y, p, r \u001b[39m=\u001b[39m rotation_matrix_to_euler_angles(R_mat)\n\u001b[0;32m---> 24\u001b[0m transfom_mat\u001b[39m.\u001b[39;49mappend()\n\u001b[1;32m     25\u001b[0m \u001b[39mpass\u001b[39;00m\n",
-      "\u001b[0;31mTypeError\u001b[0m: append() takes exactly one argument (0 given)"
+      "[[0.0, 0.0, 0.0, 0.0, -0.0, 0.0], [1.0, 0.0, 0.0, 0.0, -0.0, 1.5707963267948966], [0.0, 1.0, 0.0, 0.0, -0.0, 0.0]]\n"
      ]
     }
    ],
@@ -998,16 +987,20 @@
     "            pose.rotation().matrix()[2][2],\n",
     "        ],\n",
     "    ]\n",
-    "    print(R_mat)\n",
     "    T_mat = [pose.translation()[0], pose.translation()[1], pose.translation()[2]]\n",
     "    y, p, r = rotation_matrix_to_euler_angles(R_mat)\n",
-    "    transfom_mat.append()\n",
-    "    pass"
+    "    transfom_mat.append(\n",
+    "        [pose.translation()[0], pose.translation()[1], pose.translation()[2], y, p, r]\n",
+    "    )\n",
+    "\n",
+    "print(transfom_mat)\n",
+    "\n",
+    "plot_arrows_6dof(transfom_mat)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1023,7 +1016,7 @@
    ],
    "source": [
     "print(poses[0].translation())\n",
-    "print(poses[0].rotation().matrix())"
+    "print(poses[0].rotation().matrix())\n"
    ]
   },
   {
@@ -1042,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1117,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1126,7 +1119,7 @@
        "x0"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
