--- a/notebooks/6Dof_Graph_Matching.ipynb
+++ b/notebooks/6Dof_Graph_Matching.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
+     ]
+    }
+   ],
    "source": [
     "import gtsam\n",
     "import numpy as np\n",
@@ -22,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -320,19 +330,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "R = [-1, 0, 0, 0, 1, 0, 0, 0, -1]\n",
     "t = [0, 0, 0]\n",
     "Scene3 = transform_poses(Scene2, R, t)\n",
-    "# Scene3 = transform_poses(Scene1, R, t)"
+    "Scene4 = transform_poses(Scene1, R, t)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +411,7 @@
     "Link2_6dof = gtsam.noiseModel.Diagonal.Sigmas([0.05, 0.05, 0.05, 0.05, 0.05, 0.05])\n",
     "Prior_6dof = gtsam.noiseModel.Diagonal.Sigmas([0, 0, 0, 0, 0, 0])\n",
     "\n",
-    "graph_vis_6dof = Digraph(comment=\"Simple Directed Graph\")\n",
+    "# graph_vis_6dof = Digraph(comment=\"Simple Directed Graph\")\n",
     "graph_vis_6dof = graphviz.Graph()\n",
     "\n",
     "Poses_Ref_6dof = []\n",
@@ -449,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +552,7 @@
        "'graph_matching_6dof.pdf'"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
