--- a/Dpgo_scripts/Dpgo.ipynb
+++ b/Dpgo_scripts/Dpgo.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
+     ]
+    }
+   ],
    "source": [
+    "from pprint import pprint\n",
     "import numpy as np\n",
     "import graphviz\n",
     "import gtsam\n",
@@ -26,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +75,7 @@
        " 'setWeights']"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +124,7 @@
        " 'string']"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +146,7 @@
        "       [0., 0., 1.]])"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,48 +346,42 @@
     "                    edge_pose = Pose3(\n",
     "                        Rot3(rotation_matrix.ravel()), Point3(x, y, z))\n",
     "\n",
-    "                    self.edges.append((from_node_id, to_node_id, edge_pose))"
+    "                    self.edges.append((from_node_id, to_node_id, edge_pose))      "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(0, 1, R: [\n",
-      "\t-0.6, 0.8, 1.47763669e+248;\n",
-      "\t-0.8, 4.65592157e-310, 4.78214477e+180;\n",
-      "\t0, 4.65591907e-310, 1.16441574e-28\n",
+      "[(0, R: [\n",
+      "\t-1, 0, 0;\n",
+      "\t0, -1, 0;\n",
+      "\t0, 0, 1\n",
       "]\n",
-      "t: 1 1 0\n",
-      "), (1, 2, R: [\n",
-      "\t-0.6, 0.8, 1.47763669e+248;\n",
-      "\t-0.8, 4.65592157e-310, 4.78214477e+180;\n",
-      "\t0, 4.65591907e-310, 1.16441574e-28\n",
+      "t: 0 0 0\n",
+      "), (1, R: [\n",
+      "\t-1, 0, 0;\n",
+      "\t0, -1, 0;\n",
+      "\t0, 0, 1\n",
       "]\n",
-      "t: 1 1 0\n",
-      "), (2, 3, R: [\n",
-      "\t-0.6, 0.8, 1.47763669e+248;\n",
-      "\t-0.8, 4.65592157e-310, 4.78214477e+180;\n",
-      "\t0, 4.65591907e-310, 1.16441574e-28\n",
+      "t: 1 0 0\n",
+      "), (2, R: [\n",
+      "\t-1, 0, 0;\n",
+      "\t0, -1, 0;\n",
+      "\t0, 0, 1\n",
       "]\n",
-      "t: 1 1 0\n",
-      "), (0, 3, R: [\n",
-      "\t-0.923076923, 0.384615385, 1.47763669e+248;\n",
-      "\t-0.384615385, 4.65592157e-310, 4.78214477e+180;\n",
-      "\t0, 4.65591907e-310, 1.16441574e-28\n",
+      "t: 2 0 0\n",
+      "), (3, R: [\n",
+      "\t-1, 0, 0;\n",
+      "\t0, -1, 0;\n",
+      "\t0, 0, 1\n",
       "]\n",
-      "t: 1 3 0\n",
-      "), (1, 3, R: [\n",
-      "\t-0.923076923, 0.384615385, 1.47763669e+248;\n",
-      "\t-0.384615385, 4.65592157e-310, 4.78214477e+180;\n",
-      "\t0, 4.65591907e-310, 1.16441574e-28\n",
-      "]\n",
-      "t: 1 2 0\n",
+      "t: 3 0 0\n",
       ")]\n"
      ]
     }
@@ -387,7 +392,7 @@
     "\n",
     "# Read the data\n",
     "robot1 = Robot(1, path1)\n",
-    "print(robot1.edges)\n",
+    "print(robot1.poses)\n",
     "# print(robot1.poses)\n",
     "# print(robot1.edges[0][0])\n",
     "\n",
@@ -396,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,18 +608,26 @@
     "            return\n",
     "        self.submaps[submap_id].add_robot(robot)\n",
     "\n",
+    "    # not required\n",
     "    def add_pose_to_submap(self, submap_id, pose):\n",
     "        if submap_id not in self.submaps:\n",
     "            print(f\"Submap {submap_id} does not exist\")\n",
     "            return\n",
     "        self.submaps[submap_id].add_node(pose)\n",
     "\n",
-    "    # merge map based on the different cliques found using connected sets\n",
-    "    def add_edge_to_submap(self, submap_id, from_node_id, to_node_id, edge):\n",
+    "    # # merge map based on the different cliques found using connected sets\n",
+    "    def add_edge_to_submap(self, submap_id, from_node_id, to_node_id, edge_pose3):\n",
     "        if submap_id not in self.submaps:\n",
     "            print(f\"Submap {submap_id} does not exist\")\n",
     "            return\n",
-    "        self.submaps[submap_id].add_edge(from_node_id, to_node_id, edge)\n",
+    "        self.submaps[submap_id].add_edge(from_node_id, to_node_id, edge_pose3)\n",
+    "    \n",
+    "    \n",
+    "    # def add_loop_to_submap(self, submap_id, from_node_id, to_node_id, edge_pose3):\n",
+    "    #     if submap_id not in self.submaps:\n",
+    "    #         print(f\"Submap {submap_id} does not exist\")\n",
+    "    #         return\n",
+    "    #     self.submaps[submap_id].add_edge(from_node_id, to_node_id, edge_pose3)\n",
     "\n",
     "    # rewrtie this function\n",
     "    def merge_submaps(self, robot1_id, robot2_id):\n",
@@ -652,12 +665,15 @@
     "    def print_map(self):\n",
     "        print(\"Map:\")\n",
     "        for submap_id, submap in self.submaps.items():\n",
-    "            submap.print_submap()"
+    "            submap.print_submap()\n",
+    "    \n",
+    "    def loop_closure_detector():\n",
+    "        pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -675,10 +691,10 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[186], line 56\u001b[0m\n\u001b[1;32m     54\u001b[0m args\u001b[39m.\u001b[39mfile_names \u001b[39m=\u001b[39m [\u001b[39m\"\u001b[39m\u001b[39m./Traj_Data/traj.txt\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39m./Traj_Data/traj.txt\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[1;32m     55\u001b[0m \u001b[39m# Call the main function with the parsed arguments\u001b[39;00m\n\u001b[0;32m---> 56\u001b[0m main(args)\n",
-      "Cell \u001b[0;32mIn[186], line 15\u001b[0m, in \u001b[0;36mmain\u001b[0;34m(args)\u001b[0m\n\u001b[1;32m     13\u001b[0m submap_id \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39msubmap_\u001b[39m\u001b[39m{\u001b[39;00mrobot\u001b[39m.\u001b[39mrobot_id\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m     14\u001b[0m map_obj\u001b[39m.\u001b[39madd_submap(submap_id)\n\u001b[0;32m---> 15\u001b[0m map_obj\u001b[39m.\u001b[39;49madd_robot_to_submap(submap_id, robot\u001b[39m.\u001b[39;49mrobot_id)\n\u001b[1;32m     16\u001b[0m \u001b[39mfor\u001b[39;00m pose \u001b[39min\u001b[39;00m robot\u001b[39m.\u001b[39mposes:\n\u001b[1;32m     17\u001b[0m     map_obj\u001b[39m.\u001b[39madd_pose_to_submap(submap_id, pose)\n",
-      "Cell \u001b[0;32mIn[185], line 15\u001b[0m, in \u001b[0;36mMap.add_robot_to_submap\u001b[0;34m(self, submap_id, robot)\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mSubmap \u001b[39m\u001b[39m{\u001b[39;00msubmap_id\u001b[39m}\u001b[39;00m\u001b[39m does not exist\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     14\u001b[0m     \u001b[39mreturn\u001b[39;00m\n\u001b[0;32m---> 15\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49msubmaps[submap_id]\u001b[39m.\u001b[39;49madd_robot(robot)\n",
-      "Cell \u001b[0;32mIn[183], line 22\u001b[0m, in \u001b[0;36mSubmap.add_robot\u001b[0;34m(self, robot)\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39madd_robot\u001b[39m(\u001b[39mself\u001b[39m, robot):\n\u001b[1;32m     21\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrobots\u001b[39m.\u001b[39mappend(robot)\n\u001b[0;32m---> 22\u001b[0m     \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(robot\u001b[39m.\u001b[39;49mposes)):\n\u001b[1;32m     23\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39madd_node(\n\u001b[1;32m     24\u001b[0m             Symbol(robot\u001b[39m.\u001b[39mget_symbol(), \u001b[39mint\u001b[39m(\n\u001b[1;32m     25\u001b[0m                 robot\u001b[39m.\u001b[39mposes[i][\u001b[39m0\u001b[39m])), robot\u001b[39m.\u001b[39mposes[i][\u001b[39m1\u001b[39m]\n\u001b[1;32m     26\u001b[0m         )\n\u001b[1;32m     27\u001b[0m     \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(robot\u001b[39m.\u001b[39medges)):\n",
+      "Cell \u001b[0;32mIn[13], line 56\u001b[0m\n\u001b[1;32m     54\u001b[0m args\u001b[39m.\u001b[39mfile_names \u001b[39m=\u001b[39m [\u001b[39m\"\u001b[39m\u001b[39m./Traj_Data/traj.txt\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39m./Traj_Data/traj.txt\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[1;32m     55\u001b[0m \u001b[39m# Call the main function with the parsed arguments\u001b[39;00m\n\u001b[0;32m---> 56\u001b[0m main(args)\n",
+      "Cell \u001b[0;32mIn[13], line 15\u001b[0m, in \u001b[0;36mmain\u001b[0;34m(args)\u001b[0m\n\u001b[1;32m     13\u001b[0m submap_id \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39msubmap_\u001b[39m\u001b[39m{\u001b[39;00mrobot\u001b[39m.\u001b[39mrobot_id\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m     14\u001b[0m map_obj\u001b[39m.\u001b[39madd_submap(submap_id)\n\u001b[0;32m---> 15\u001b[0m map_obj\u001b[39m.\u001b[39;49madd_robot_to_submap(submap_id, robot\u001b[39m.\u001b[39;49mrobot_id)\n\u001b[1;32m     16\u001b[0m \u001b[39mfor\u001b[39;00m pose \u001b[39min\u001b[39;00m robot\u001b[39m.\u001b[39mposes:\n\u001b[1;32m     17\u001b[0m     map_obj\u001b[39m.\u001b[39madd_pose_to_submap(submap_id, pose)\n",
+      "Cell \u001b[0;32mIn[12], line 15\u001b[0m, in \u001b[0;36mMap.add_robot_to_submap\u001b[0;34m(self, submap_id, robot)\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mSubmap \u001b[39m\u001b[39m{\u001b[39;00msubmap_id\u001b[39m}\u001b[39;00m\u001b[39m does not exist\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     14\u001b[0m     \u001b[39mreturn\u001b[39;00m\n\u001b[0;32m---> 15\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49msubmaps[submap_id]\u001b[39m.\u001b[39;49madd_robot(robot)\n",
+      "Cell \u001b[0;32mIn[10], line 22\u001b[0m, in \u001b[0;36mSubmap.add_robot\u001b[0;34m(self, robot)\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39madd_robot\u001b[39m(\u001b[39mself\u001b[39m, robot):\n\u001b[1;32m     21\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrobots\u001b[39m.\u001b[39mappend(robot)\n\u001b[0;32m---> 22\u001b[0m     \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(robot\u001b[39m.\u001b[39;49mposes)):\n\u001b[1;32m     23\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39madd_node(\n\u001b[1;32m     24\u001b[0m             Symbol(robot\u001b[39m.\u001b[39mget_symbol(), \u001b[39mint\u001b[39m(\n\u001b[1;32m     25\u001b[0m                 robot\u001b[39m.\u001b[39mposes[i][\u001b[39m0\u001b[39m])), robot\u001b[39m.\u001b[39mposes[i][\u001b[39m1\u001b[39m]\n\u001b[1;32m     26\u001b[0m         )\n\u001b[1;32m     27\u001b[0m     \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(robot\u001b[39m.\u001b[39medges)):\n",
       "\u001b[0;31mAttributeError\u001b[0m: 'int' object has no attribute 'poses'"
      ]
     }
